deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-otus-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-otus-app
  template:
    metadata:
      labels:
        app: my-otus-app
    spec:
      containers:
      - name: my-otus-app
        image: nikanorovss/nikanorovss_otus_hw2:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
