service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-otus-service
spec:
  selector:
    app: my-otus-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: NodePort
