ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-otus-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Exact
        backend:
          service:
            name: my-otus-service
            port:
              number: 8080
      - path: /otusapp/(.*)/(.*)
        pathType: Prefix
        backend:
          service:
            name: my-otus-service
            port:
              number: 8080
